--- a/R/TCGABiolinks_Query.Rmd
+++ b/R/TCGABiolinks_Query.Rmd
@@ -97,3 +97,17 @@ dataDEGsFiltLevel <- TCGAanalyze_LevelTab(dataDEGs,"Tumor","Normal",
 dataDEGsFiltLevel
 ```
 
+```{r}
+#test get gistic
+# Get GISTIC values
+gistic.query <- GDCquery(project = "TCGA-BRCA",
+                         data.category = "Copy Number Variation",
+                         data.type = "Gene Level Copy Number Scores",
+                         access = "open")
+GDCdownload(gistic.query)
+gistic <- GDCprepare(gistic.query)
+class(gistic)
+View(gistic$`TCGA-E2-A1IH-01A-11D-A13J-01`)
+
+
+```
